# did-btcr2-py

./: .gitignore  README.md  address_manager_example.py  beacon_manager_example.py  pyproject.toml  setup.py
libbtcr2/: address_manager.py  beacon_manager.py  bech32.py  constants.py  did.py  did_manager.py  error.py  esplora_client.py  helper.py  helpers.py  multikey.py  network_config.py  resolver.py  service.py  setup.py  verificationMethod.py
libbtcr2/diddoc/: builder.py  doc.py  updater.py
scripts/: mutinynet_create.py  regtest_create_deterministic.py  regtest_create_external.py  resolve.py
test/: test_did.py  test_did_manager.py
